--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -1,4 +1,10 @@
 /* Typography, headings */
+div.container-fluid {
+  padding: 0;
+}
+div.row {
+  margin: 0;
+}
 body {
   font-family: "Raleway";
   font-weight: 300;
@@ -51,4 +57,8 @@ nav#navbarSpy {
   letter-spacing: 2px;
   font-size: 15px;
   color: black;
+}
+footer.row {
+  background-color: $primary_color;
+  margin: 0;
 }
